added rules, process and incident process & serivice

--- a/env.conf
+++ b/env.conf
@@ -11,7 +11,10 @@ namespace_tools=${project_admin}-${tools_project_name}
 
 kafka_cluster=kafka-cluster
 postgresql_application_name=postgresql
+postgresql_credentials_secret=${postgresql_application_name}-credentials
 postgresql_database=emergency_response_demo
+postgresql_username=naps
+postgresql_password=naps
 
 emergency_console_application_name=emergency-console
 responder_client_application_name=responder-client-app
