fixed process service can not find kjar issue

--- a/apps/process-service/process-service.yaml
+++ b/apps/process-service/process-service.yaml
@@ -58,7 +58,7 @@ items:
             - name: MAVEN_MIRROR_URL
               value: {{ nexus_mirror }}
             - name: JAVA_OPTIONS
-              value: '-Dkie.maven.settings.custom=/m2/settings.xml'
+              value: '-Dkie.maven.settings.custom=/deployments/settings.xml'
             imagePullPolicy: IfNotPresent
             name: {{ application_name }}
             ports:
