--- a/env.conf
+++ b/env.conf
@@ -9,17 +9,32 @@ namespace_kafka_cluster=${project_admin}-${project_name}
 namespace_datagrid=${project_admin}-${project_name}
 namespace_tools=${project_admin}-${tools_project_name}
 
+emergency_console_application_name=emergency-console
+responder_client_application_name=responder-client-app
+incident_priority_service_application_name=incident-priority-service
+process_service_application_name=process-service
+responder_service_application_name=responder-service
+disaster_service_application_name=disaster-service
+
+datagrid_application_name=datagrid-service
+datagrid_application_user=demo
+datagrid_application_password=demo
+
 kafka_cluster=kafka-cluster
+kafka_connect=kafka-connect
+
 postgresql_application_name=postgresql
 postgresql_credentials_secret=${postgresql_application_name}-credentials
 postgresql_database=emergency_response_demo
 postgresql_username=naps
 postgresql_password=naps
 
-emergency_console_application_name=emergency-console
-responder_client_application_name=responder-client-app
-incident_priority_service_application_name=incident-priority-service
-
-nexus_service=nexus.${namespace_tools}.svc
+nexus_service_name=nexus
+nexus_service=${nexus_service_name}.${namespace_tools}.svc
 nexus_service_port=8081
 nexus_url=http://${nexus_service}:${nexus_service_port}
+
+process_service_postgresql_service_name=process-service-postgresql
+process_service_postgresql_username=rhpam
+process_service_postgresql_password=rhpam
+process_service_postgresql_database=rhpam
