--- a/apps/process-service/process-service-pipeline.yaml
+++ b/apps/process-service/process-service-pipeline.yaml
@@ -49,9 +49,16 @@ spec:
           }
 
           stage ('Build Image') {
+            sh "mkdir deployFiles && cp -r target/repository deployFiles && cp target/${artifactId}-${version}.jar deployFiles/${artifactId}-${version}.jar"
+            sh "cp /home/jenkins/.m2/settings.xml deployFiles/"
+            def xml="<localRepository>/deployments/repository</localRepository>"
+            sh "sed -i 's|<proxies>||' deployFiles/settings.xml"
+            sh "sed -i 's|</proxies>||' deployFiles/settings.xml"
+            sh "sed -i 's|<!-- ### configured http proxy ### -->|${xml}|' deployFiles/settings.xml"
+            sh "cat deployFiles/settings.xml"
             openshift.withCluster() { // Use "default" cluster or fallback to OpenShift cluster detection
               def bc = openshift.selector("bc", "${app_build}")
-              def builds = bc.startBuild("--from-file=target/${artifactId}-${version}.jar")
+              def builds = bc.startBuild("--from-file=deployFiles")
               timeout (15) {
                 builds.watch {
                   if ( it.count() == 0 ) {
