--- a/env.conf
+++ b/env.conf
@@ -2,6 +2,8 @@ project_admin=admin
 project_name=er-demo
 tools_project_name=er-tools
 
+map_token=pk.egfdgewrthfdiamJyaWRERKLJWRIONE23czdXBrcW5mbmg0amkifQ.iBEb0APX1Vmo-2934rj
+
 namespace_sso=er-sso
 namespace_services=${project_admin}-${project_name}
 namespace_postgresql=${project_admin}-${project_name}
@@ -15,6 +17,11 @@ incident_priority_service_application_name=incident-priority-service
 process_service_application_name=process-service
 responder_service_application_name=responder-service
 disaster_service_application_name=disaster-service
+incident_service_application_name=incident-service
+mission_service_application_name=mission-service
+responder_simulator_service_application_name=responder-simulator
+disaster_simulator_service_application_name=disaster-simulator
+process_viewer_application_name=process-viewer
 
 datagrid_application_name=datagrid-service
 datagrid_application_user=demo
