added disaster-service & erd-monitoring

--- a/env.conf
+++ b/env.conf
@@ -1,10 +1,16 @@
 project_admin=admin
 project_name=er-demo
 tools_project_name=er-tools
+metrics_project_name=er-monitoring
 
 map_token=pk.egfdgewrthfdiamJyaWRERKLJWRIONE23czdXBrcW5mbmg0amkifQ.iBEb0APX1Vmo-2934rj
 
+prometheus_serviceaccount_name=prometheus-service-account
+monitoring_label=prometheus
+monitoring_label_value=${project_admin}-er-monitoring
+
 namespace_sso=er-sso
+namespace_monitoring=${project_admin}-${metrics_project_name}
 namespace_services=${project_admin}-${project_name}
 namespace_postgresql=${project_admin}-${project_name}
 namespace_kafka_cluster=${project_admin}-${project_name}
@@ -45,3 +51,8 @@ process_service_postgresql_service_name=process-service-postgresql
 process_service_postgresql_username=rhpam
 process_service_postgresql_password=rhpam
 process_service_postgresql_database=rhpam
+
+dw_postgresql_application_name=dw-postgresql
+dw_postgresql_database=datawarehouse
+dw_postgresql_username=naps
+dw_postgresql_password=naps
