added datawarehouse & refactored for existing project checking

--- a/env.conf
+++ b/env.conf
@@ -28,6 +28,7 @@ mission_service_application_name=mission-service
 responder_simulator_service_application_name=responder-simulator
 disaster_simulator_service_application_name=disaster-simulator
 process_viewer_application_name=process-viewer
+dw_application_name=datawarehouse
 
 datagrid_application_name=datagrid-service
 datagrid_application_user=demo
