--- a/tools/amq-streams/env.conf
+++ b/tools/amq-streams/env.conf
@@ -14,6 +14,7 @@ zookeeper_readiness_probe_timeout_seconds=5
 zookeeper_liveness_probe_initial_delay_seconds=30
 zookeeper_liveness_probe_timeout_seconds=5
 
+kafka_version=2.6.0
 kafka_log_message_format_version=2.6
 kafka_replicas=3
 kafka_volume_capacity=5Gi
