addd datawarehouse, find-service & kafdrop

--- a/env.conf
+++ b/env.conf
@@ -29,6 +29,8 @@ responder_simulator_service_application_name=responder-simulator
 disaster_simulator_service_application_name=disaster-simulator
 process_viewer_application_name=process-viewer
 dw_application_name=datawarehouse
+find_application_name=find-service
+kafdrop_application_name=kafdrop
 
 datagrid_application_name=datagrid-service
 datagrid_application_user=demo
