bug fixed for wrong rules and checking vars

--- a/apps/erd-monitoring/prometheus-monitoring-role-binding.yaml
+++ b/apps/erd-monitoring/prometheus-monitoring-role-binding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: prometheus-monitoring
   namespace: {{ namespace_services }}
 roleRef:
-  kind: ClusterRole
+  kind: Role
   name: prometheus-monitoring
   namespace: {{ namespace_services }}
 subjects:
