refactored for git repo definition

--- a/apps/emergency-console/env.conf
+++ b/apps/emergency-console/env.conf
@@ -20,8 +20,8 @@ kafka_topic_responder_command=topic-responder-command
 buildconfig_name=${application_name}
 application_image=nodejs:10
 application_image_namespace=openshift
-git_url=https://github.com/JonkeyGuan/emergency-console.git
-git_ref=master
+git_url=${emergency_console_git_repo}
+git_ref=${emergency_console_git_branch}
 
 imagestream_name=${application_name}
 
