--- a/apps/responder-client-app/env.conf
+++ b/apps/responder-client-app/env.conf
@@ -5,8 +5,8 @@ service_account=responder-client-app
 responder_client_app_config_map_token=${map_token}
 
 buildconfig_name=${application_name}
-git_url=https://github.com/JonkeyGuan/mobile-app.git
-git_ref=master
+git_url=${responder_client_git_repo}
+git_ref=${responder_client_git_branch}
 application_image=nodejs:10
 application_image_namespace=openshift
 
