--- a/tools/datagrid/datagrid_cr.yaml
+++ b/tools/datagrid/datagrid_cr.yaml
@@ -10,12 +10,14 @@ spec:
     extraJvmOpts: "-XX:NativeMemoryTracking=summary"
     cpu: "{{ total_container_cpu }}"
     memory: {{ total_container_memory }}
-#  expose:
-#    type: Route
+  expose:
+    type: Route
   service:
     type: Cache
   security:
     endpointSecretName: {{ datagrid_connect_secret }}
+    endpointEncryption:
+      type: None
 #    endpointEncryption:
 #      type: service
 #      certServiceName: service.beta.openshift.io
