--- a/tools/knative/knative-eventing.yaml
+++ b/tools/knative/knative-eventing.yaml
@@ -2,7 +2,7 @@
 # However, with this install, only the in-memory channels are provided
 #  Install KnativeEventingKafka to enable broker channels to be persisted by Kafka
 
-apiVersion: operator.knative.dev/v1
+apiVersion: operator.knative.dev/v1alpha1
 kind: KnativeEventing
 metadata:
     name: knative-eventing
